test_suite/tests/ui/precondition/deserialize_dst.stderr
error: cannot deserialize a dynamically sized struct
 --> $DIR/deserialize_dst.rs:5:1
  |
5 | / struct S {
6 | |     string: String,
7 | |     slice: [u8],
8 | | }
  | |_^

error: aborting due to previous error

